# palindrome-detector

./: .env.example  .gitignore  Makefile  README.md  config.py  pyproject.toml  run.py
app/: __init__.py  extensions.py
app/api/: __init__.py  health.py  palindromes.py  schemas.py
app/core/: parser.py
app/models/: __init__.py  palindrome.py
app/services/: __init__.py
app/services/palindrome/: __init__.py  palindrome_dtos.py  palindrome_service.py
docker/: Dockerfile  docker-compose.yml  run.sh
docker/entrypoints/: migrations_entrypoint.sh
migrations/versions/: ca3e94739bfc_initial_database.py
nginx/: nginx.conf
redis/: redis.conf
tests/: conftest.py
tests/integration/: test_health_api.py  test_palindromes_api.py
tests/unit/: test_dtos.py  test_health_api.py  test_palindrome_service.py  test_palindromes_api.py  test_parser.py  test_schemas.py
