[tool.poetry]
name = "palindrome-detector"
version = "0.1.0"
description = ""
authors = ["Jesús Izquierdo <jesus.izquierdocubas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
flask-cors = "^5.0.1"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
marshmallow = "^3.21.3"
marshmallow-sqlalchemy = "^1.1.0"
apifairy = "^1.4.0"
psycopg2-binary = "^2.9.10"
flask-caching = "^2.3.1"
redis = "^6.2.0"
pydantic = "^2.11.7"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"
pytest-flask = "^1.3.0"
pytest-cov = "^5.0.0"
flake8 = "^7.1.0"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
